fixed overflow

--- a/styles/site.css
+++ b/styles/site.css
@@ -297,6 +297,7 @@ a {
   background-attachment: fixed;
   height: 800px;
   margin-top: 100px;
+  overflow: hidden;
 }
 .section-img .content {
 }
